fixed scrollbar issue on payslip-overview

--- a/app/components/payslip-overview/style.scss
+++ b/app/components/payslip-overview/style.scss
@@ -1,3 +1,4 @@
 .payslip-overview {
+  height: 100%;
   text-align: center;
 }
